--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,15 @@
 @import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+// body {
+//   background: $c-gray;
+// }
+
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/burgerMenu.scss";
+@import "blocks/events.scss";
+@import "blocks/screensaver.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
