--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -4,7 +4,8 @@
   column-gap: 30px;
   position: relative;
   padding: 0 55px;
-  max-width: 1280px;
+  max-width: 1170px;
+  margin: 0 auto;
 
   @include phone {
     grid-template-columns: repeat(2, 1fr);
