--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -3,6 +3,8 @@
   grid-template-columns: repeat(12, 1fr);
   column-gap: 30px;
   padding: 0 55px 200px;
+  margin: 0 auto;
+  max-width: 1170px;
 
   @include phone {
     display: grid;
@@ -62,6 +64,11 @@
 
     &--paintings {
       max-width: 100%;
+      transition: 0.5s;
+
+      &:hover {
+        transform: scale(1.05);
+      }
 
       &-1 {
         grid-column: 1 / 5;
