--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,12 +1,17 @@
 .subscription {
   margin: 0 auto;
-  max-width: 1280px;
+  max-width: 100%;
+  background-image: url(../images/paint_fon.svg);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+
+  @include phone {
+    background-size: auto;
+  }
 
   &__grid {
     max-height: 554px;
     margin: 0 auto;
-    background-image: url(../images/paint_fon.svg);
-    background-repeat: no-repeat;
     height: 554px;
     max-width: 100%;
     align-content: center;
@@ -113,6 +118,7 @@
       height: 70px;
       background-color: #fff;
       box-sizing: border-box;
+      outline: 0;
 
       &::placeholder {
         font-family: "Montserrat", sans-serif;
@@ -141,7 +147,9 @@
       color: #000;
       background-color: #f14a27;
       cursor: pointer;
-      padding: 25px 27px;
+      padding: 25px 30px;
+      border: none;
+      box-sizing: border-box;
 
       &::after {
         content: "";
@@ -149,6 +157,12 @@
         width: 8px;
         display: flex;
         background-image: url(../images/vector.png);
+      }
+
+      transition: 0.5s;
+
+      &:hover {
+        transform: scale(1.05);
       }
 
       @include tablet {
