--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -5,7 +5,8 @@
   column-gap: 30px;
   position: relative;
   padding: 0 55px;
-  max-width: 1280px;
+  max-width: 1170px;
+  margin: 0 auto;
 
   @include phone {
     grid-column: 1 / 3;
@@ -172,6 +173,11 @@
     text-decoration: none;
     margin-top: 89px;
     margin-left: 3px;
+    transition: 0.3s;
+
+    &:hover {
+      transform: scale(1.05);
+    }
 
     @include phone {
       grid-column: 1 / 3;
