--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,16 +8,9 @@
   scroll-behavior: smooth;
 
   &__body {
-    max-width: 1280px;
+    max-width: 100%;
     min-width: 320px;
     margin: 0 auto;
+    position: relative;
   }
-}
-
-img {
-  transition: 1s;
-}
-
-img:hover {
-  transform: scale(1.1);
 }
