--- a/src/styles/blocks/screensaver.scss
+++ b/src/styles/blocks/screensaver.scss
@@ -1,7 +1,7 @@
 .screensaver {
 
   &__image {
-    width: 1280px;
+    width: 100%;
     height: 100%;
     background-repeat: no-repeat;
     max-width: 100%;
