--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/logo.scss";
+@import "blocks/menu.scss";
+@import "blocks/header.scss";
+@import "blocks/art-museum.scss";
+@import "blocks/grid.scss";
+@import "blocks/events.scss";
+@import "blocks/lecture.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/footer.scss";
