Gallery x-scroll created

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,1043 +2,16 @@
 @import "fonts";
 @import "typography";
 
-// html {
-//   scroll-behavior: smooth;
-// }
-
-.page {
-  margin: 0;
-
-  background: $c-white;
-  font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
-
-  scroll-behavior: smooth;
-
-  &__section {
-    margin: 0 auto;
-  }
-
-  * {
-    box-sizing: border-box;
-  }
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1600px;
-  padding: 0 20px;
-
-  @include onTablet {
-    padding: 0 39px;
-  }
-
-  @include onLaptop {
-    padding: 0 55px;
-  }
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  column-gap: 20px;
-
-  @include onTablet {
-    grid-template-columns: repeat(6, 1fr);
-    column-gap: 30px;
-  }
-
-  @include onLaptop {
-    grid-template-columns: repeat(12, 1fr);
-  }
-
-  &__tablet {
-    display: block;
-
-    @include onTablet {
-      display: grid;
-      grid-template-columns: repeat(6, 1fr);
-      column-gap: 30px;
-    }
-  }
-
-  &__laptop {
-    display: block;
-
-    @include onLaptop {
-      display: grid;
-      grid-template-columns: repeat(12, 1fr);
-      column-gap: 30px;
-    }
-  }
-
-  &__item {
-    @for $start from 1 through 12 {
-      @for $end from $start through 12 {
-        &--#{$start}-#{$end} {
-          grid-column: #{$start} / #{$end + 1};
-        }
-
-        &--tablet-#{$start}-#{$end} {
-          @include onTablet {
-            grid-column: #{$start} / #{$end + 1};
-          }
-        }
-
-        &--laptop-#{$start}-#{$end} {
-          @include onLaptop {
-            grid-column: #{$start} / #{$end + 1};
-          }
-        }
-      }
-    }
-  }
-}
-
-.header {
-  &__container {
-    margin-bottom: 70px;
-    position: relative;
-
-    @include onTablet {
-      margin-bottom: 110px;
-    }
-
-    @include onLaptop {
-      margin-bottom: 320px;
-    }
-  }
-
-  &__menu {
-    background: url(../images/subscribe_image.svg) center no-repeat;
-    background-size: cover;
-    position: fixed;
-    top: 0;
-    left: 0;
-    padding: 20vw 0 0 20vw;
-
-    width: 100vw;
-    height: 100vh;
-    z-index: 2;
-
-    transform: translateX(-100%);
-    transition: transform 0.3s;
-
-    &:target {
-      transform: translateX(0);
-    }
-
-    &--line {
-      width: 5vw;
-      height: 0.5vw;
-      background: $c-white;
-      border-radius: 2px;
-    }
-
-    &--close-link {
-      margin: 0 0 15vw;
-
-      position: relative;
-      display: flex;
-      flex-direction: column;
-      justify-content: start;
-
-      &-1 {
-        position: absolute;
-        transform: rotate(45deg);
-      }
-
-      &-2 {
-        transform: rotate(-45deg);
-      }
-    }
-
-    &--link {
-      padding-bottom: 8px;
-      font-family: "IBM Plex Sans", Arial, Helvetica, sans-serif;
-      font-style: normal;
-      font-size: 7vw;
-      font-weight: 400;
-      line-height: 200%;
-      color: $c-white;
-      border-bottom: 2px solid transparent;
-
-      @include hover(border-color, $c-white);
-    }
-  }
-
-  &__images {
-    margin: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: -1;
-    width: 100%;
-
-    @include onTablet {
-      width: 384px;
-    }
-
-    @include onLaptop {
-      width: 725px;
-    }
-
-    &--container {
-      margin: 0;
-      position: relative;
-    }
-
-    &--image {
-      width: 100%;
-      height: auto;
-    }
-
-    &--logo {
-      position: absolute;
-      top: 9px;
-      right: 41%;
-      display: flex;
-      width: 55px;
-      height: 61px;
-
-      @include onTablet {
-        top: 15px;
-        left: 77px;
-        width: 62px;
-        height: 72px;
-      }
-
-      @include onLaptop {
-        left: 52px;
-      }
-  
-      &-image {
-        width: 100%;
-        height: 100%;
-      }
-    }
-  }
-
-  &__nav {
-    &--image {
-      margin: 33px 0 95%;
-
-      @include onTablet {
-        margin-bottom: 70px;
-      }
-
-      @include onLaptop {
-        margin-bottom: 150px;
-      }
-    }
-  }
-
-  &__title {
-    margin: 0 auto 20px;
-
-    max-width: 280px;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 45px;
-    line-height: 100%;
-
-    @include title1_700;
-
-    @include onTablet {
-      margin: 0 0 40px;
-
-      max-width: 340px;
-      text-align: left;
-      font-size: 54px;
-      line-height: 120%;
-    }
-
-    @include onLaptop {
-      margin: 0 0 90px;
-      max-width: 470px;
-      font-size: 72px;
-    }
-  }
-
-  &__tickets {
-    margin: 0 auto;
-
-    height: 50px;
-    width: 280px;
-    border: 1px solid #1a5a4c;
-
-    @include onTablet {
-      margin: 0;
-
-      height: 70px;
-      width: 265px;
-    }
-
-    @include onLaptop {
-      margin-left: 200px;
-
-      width: 270px;
-    }
-
-    &--link {
-      margin: 0 auto;
-  
-      font-size: 16px;
-      text-transform: uppercase;
-      color: $c-darkgrey;
-
-      @include title4_500_100;
-    }
-
-    &--arrow {
-      height: 50px;
-      transform: translate(1px, 2px);
-
-      @include onTablet {
-        height: 70px;
-      }
-    }
-  }
-}
-
-.form-field {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  &--link {
-    text-decoration: none;
-  }
-}
-
-.events {
-  max-width: 1600px;
-
-  &__title {
-    margin: 0 auto 40px;
-
-    max-width: 280px;
-    text-align: center;
-    text-transform: uppercase;
-    color: $c-darkgrey;
-
-    @include title2_700_100;
-
-    @include onTablet {
-      margin: 0 0 50px;
-
-      max-width: 470px;
-      text-align: left;
-      font-size: 48px;
-    }
-
-    @include onLaptop {
-      margin: 0 0 58px;
-    }
-  }
-
-  &__image {
-    margin-bottom: 24px;
-
-    width: 100%;
-    transition: transform 0.3s linear;
-
-    &:hover {
-      transform: scale(1.05);
-    }
-
-    @include onTablet {
-      margin-bottom: 40px;
-    }
-
-    @include onLaptop {
-      margin-bottom: 106px;
-    }
-
-    &-section {
-      width: 100%;
-    }
-  }
-
-  &__items {
-    margin: 0 0 60px;
-  }
-
-  &__date {
-    margin-bottom: 15px;
-
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    @include onTablet {
-      margin-bottom: 30px;
-
-      max-width: 225px;
-    }
-
-    @include onLaptop {
-      margin-top: 160px;
-    }
-
-    &--title {
-      margin: 0;
-
-      font-size: 16px;
-      text-transform: uppercase;
-      color: $c-lightgrey;
-
-      @include title4_500_100;
-
-      @include onTablet {
-        font-size: 14px;
-      }
-    }
-
-    &--item {
-      font-size: 16px;
-
-      @include title4_700_150_green;
-
-      @include onTablet {
-        font-size: 14px;
-      }
-    }
-  }
-
-  &__container-title {
-    display: flex;
-
-    &--rectangle {
-      margin: 12px 0 0 12px;
-      width: 10px;
-      height: 10px;
-      background-color: #f14a27;
-
-      @include onTablet {
-        margin: 15px 0 0 20px;
-        width: 15px;
-        height: 15px;
-      }
-    }
-  }
-
-  &__subtitle {
-    margin: 0 0 10px;
-
-    font-size: 28px;
-
-    @include title3_400_100;
-
-    @include onTablet {
-      margin: 0 0 15px;
-
-      font-size: 36px;
-    }
-  }
-
-  &__paragraph {
-    margin: 0;
-
-    @include text_16_150;
-
-    @include onTablet {
-      max-width: 460px;
-    }
-  }
-}
-
-.lecture {
-  margin: 0 auto 45px;
-
-  width: 280px;
-  height: 140px;
-  background: $c-white;
-  transform: translateY(-40%);
-  box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
-
-  @include onTablet {
-    margin: 0 auto 38px;
-    width: 570px;
-    height: 204px;
-  }
-
-  @include onLaptop {
-    margin: 0 auto 98px;
-
-    transform: translateY(-50%);
-  }
-
-  &__items {
-    padding: 20px 0;
-
-    @include onTablet {
-      margin-left: 55px;
-
-      padding: 45px 0 23px;
-    }
-
-    @include onLaptop {
-      margin-left: 100px;
-
-    }
-  }
-
-  &__date {
-    margin: 0 auto 24px;
-
-    max-width: 240px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    @include onTablet {
-      margin: 0 0 24px;
-      max-width: 375px;
-    }
-
-    @include onLaptop {
-      max-width: 335px;
-
-    }
-
-    &--title {
-      margin: 0;
-
-      font-size: 16px;
-      text-transform: uppercase;
-      color: $c-lightgrey;
-
-      @include title4_500_100;
-
-      @include onTablet {
-        font-size: 14px;
-      }
-    }
-
-    &--item {
-      font-size: 16px;
-
-      @include title4_700_150_green;
-
-      @include onTablet {
-        font-size: 14px;
-      }
-    }
-  }
-
-  &__subtitle {
-    margin: 0 auto;
-
-    font-size: 28px;
-    text-align: center;
-
-    @include title3_400_100;
-
-    @include onTablet {
-      margin: 0;
-
-      max-width: 460px;
-      font-size: 36px;
-      text-align: left;
-    }
-  }
-}
-
-.gallery {
-  &__container {
-    margin-bottom: 100px;
-
-    @include onTablet {
-      margin-bottom: 92px;
-    }
-
-    @include onLaptop {
-      margin-bottom: 200px;
-    }
-  }
-
-  &__tablet {
-    &--container {
-      margin-bottom: 20px;
-
-      @include onTablet {
-        margin-bottom: 32px;
-      }
-    }
-
-    &--pointer {
-      margin: 0 auto;
-
-      display: flex;
-      justify-content: space-between;
-      width: 102px;
-
-      &-item {
-        display: inline-block;
-        width: 9px;
-        height: 9px;
-        border-radius: 50%;
-        background-color: #e0e0e0;
-
-        @include hover (background-color, #1a5a4c);
-      }
-
-      @include onLaptop {
-        display: none;
-      }
-    }
-  }
-
-  &__laptop {
-    display: none;
-  }
-
-  @include onTablet {
-    &__tablet {
-      display: grid;
-    }
-  }
-
-  @include onLaptop {
-    &__tablet {
-      display: none;
-    }
-
-    &__laptop {
-      display: grid;
-    }
-  }
-
-  &__title {
-    margin: 0 auto 40px;
-
-    text-align: center;
-    text-transform: uppercase;
-    color: $c-darkgrey;
-
-    @include title2_700_100;
-
-    @include onTablet {
-      margin: 0 0 48px;
-
-      text-align: left;
-      font-size: 48px;
-    }
-
-    @include onLaptop {
-      margin: 0 0 56px;
-    }
-  }
-
-  &__image {
-    width: 100%;
-    transition: transform 0.3s linear;
-
-    &:hover {
-      transform: scale(1.05);
-    }
-
-    &--tablet {
-      display: none;
-      width: 101.5%;
-    }
-
-    @include onTablet {
-      &--tablet {
-        display: block;
-      }
-    }
-
-    @include onLaptop {
-      &--first {
-        margin-bottom: 30px;
-      }
-
-      &--laptop {
-        display: none;
-      }
-    }
-  }
-}
-
-.subscribe {
-  &__container {
-    margin: 0 auto;
-
-    background: url(../images/subscribe_image.svg) center no-repeat;
-    background-size: cover;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 386px;
-
-    @include onLaptop {
-      height: 550px;
-
-    }
-  }
-
-  &__title {
-    margin: 0 auto 20px;
-
-    text-align: center;
-    color: $c-white;
-
-    @include title2_700_100;
-
-    @include onTablet {
-      font-size: 48px;
-    }
-  }
-
-  &__paragraph {
-    margin: 0 auto 50px;
-
-    text-align: center;
-    color: $c-white;
-    font-size: 16px;
-
-    @include title4_500_100;
-    line-height: 150%;
-
-    @include onTablet {
-      margin: 0 auto 72px;
-
-      line-height: 100%;
-    }
-  }
-
-  &__email {
-    margin: 0 auto;
-
-    height: 50px;
-    width: 280px;
-
-    @include onTablet {
-      height: 70px;
-      width: 460px;
-    }
-
-    @include onLaptop {
-      width: 570px;
-    }
-
-    &--link {
-      background: $c-white;
-      padding-left: 24px;
-
-      display: flex;
-      align-items: center;
-      font-family: "Montserrat", Arial, Helvetica, sans-serif;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 14px;
-      line-height: 100%;
-      width: 100%;
-      height: 100%;
-      color: $c-lightgrey;
-
-      @include onTablet {
-        background: linear-gradient(to right, $c-white 96%, transparent 4%);
-      }
-
-      @include onLaptop {
-        background: linear-gradient(to right, $c-white 95%, transparent 5%);
-      }
-    }
-
-    &--arrow {
-      height: 50px;
-      transform: translate(1px, 2px);
-
-      @include onTablet {
-        height: 70px;
-      }
-    }
-  }
-}
-
-.footer {
-  &__container {
-    margin: 50px 0 60px;
-
-    @include onTablet {
-      margin: 50px 0 35px;
-    }
-  }
-
-  &__grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 72px 1fr 71px 60px;
-    column-gap: 20px;
-
-    @include onTablet {
-      grid-template-columns: repeat(6, 1fr);
-      grid-template-rows: 160px 1fr 64px 60px;
-      column-gap: 30px;
-    }
-  
-    @include onLaptop {
-      grid-template-columns: repeat(12, 1fr);
-      grid-template-rows: 160px 1fr;
-    }
-  }
-
-  &__top {
-    grid-column: 1 / 3;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    @include onTablet {
-      grid-column: 1 / 1;
-      flex-direction: column;
-    }
-
-    &--logo {
-      background-color: chocolate;
-
-      &-image {
-        width: 63px;
-      }
-    }
-
-    &--networks {
-      background-color: chartreuse;
-      width: 62px;
-
-      &-items {
-        display: flex;
-        justify-content: space-between;
-      }
-    }
-
-    &--facebook {
-      margin: 0 26px 0 65px;
-
-      @include onTablet {
-        margin: 0 26px;
-      }
-
-      width: 11px;
-      height: 24px;
-      transition: transform 0.3s linear;
-
-      &:hover {
-        transform: scale(1.3);
-      }
-    }
-
-    &--instagram {
-      width: 24px;
-      height: 24px;
-      transition: transform 0.3s linear;
-
-      &:hover {
-        transform: scale(1.3);
-      }
-    }
-  }
-
-  &__content {
-    background-color: bisque;
-    margin-top: 40px;
-
-    @include onTablet {
-      margin-top: 0;
-    }
-
-    &--schedule {
-      @include onTablet {
-        grid-row: 1 / 4;
-        grid-column: 2 / 4;
-      }
-
-      @include onLaptop {
-        grid-row: 1 / 4;
-        grid-column: 3 / 5;
-      }
-    }
-
-    &--contacts {
-      @include onTablet {
-        grid-row: 1 / 4;
-        grid-column: 4 / 6;
-      }
-
-      @include onLaptop {
-        grid-row: 1 / 4;
-        grid-column: 5 / 7;
-      }
-    }
-
-    &--title {
-      background-color: blueviolet;
-      margin: 0 0 20px;
-
-      line-height: 150%;
-      @include text_14_400;
-    }
-
-    &--items {
-      background-color: cadetblue;
-      margin: 0;
-
-      line-height: 150%;
-      @include text_14_400;
-
-      &-bold {
-        @include text_14_150_600;
-      }
-
-      &-paragraph {
-        margin: 20px 0 0;
-
-        @include onTablet {
-          max-width: 190px;
-        }
-      }
-    }
-  }
-
-  &--line {
-    margin-top: 70px;
-
-    grid-column: 1 / 3;
-    background-color: #9bb7b1;
-    height: 1px;
-
-    @include onTablet {
-      margin-top: 0;
-
-      grid-row: 5 / 6;
-      grid-column: 2 / 6;
-    }
-
-    @include onLaptop {
-      margin-left: 50%;
-
-      grid-row: 1 / 4;
-      grid-column: 7 / 7;
-
-      width: 1px;
-      height: 260px;
-    }
-  }
-
-  &__menu {
-    margin-top: 40px;
-
-    @include onTablet {
-      margin-top: 60px;
-    }
-
-    @include onLaptop {
-      margin-top: 0;
-    }
-
-    &--left {
-      @include onTablet {
-        grid-row: 7 / 8;
-        grid-column: 2 / 4;
-      }
-
-      @include onLaptop {
-        grid-row: 1 / 1;
-        grid-column: 8 / 10;
-      }
-    }
-
-    &--right {
-      @include onTablet {
-        grid-row: 7 / 8;
-        grid-column: 4 / 6;
-      }
-
-      @include onLaptop {
-        grid-row: 1 / 1;
-        grid-column: 10 / 12;
-      }
-    }
-
-    &--items {
-      background-color: cadetblue;
-    }
-
-    &--item {
-      &:first-child {
-        margin-bottom: 20px;
-      }
-    }
-
-    &--link {
-      line-height: 100%;
-      @include text_14_400;
-    }
-  }
-
-  &--up {
-    position: fixed;
-    bottom: 10px;
-    right: 20px;
-    display: inline-block;
-    width: 50px;
-
-    &-arrow-up {
-      transition: transform 0.3s linear;
-
-      &:hover {
-        transform: scale(1.1);
-      }
-    }
-
-    @include onTablet {
-      bottom: 60px;
-      right: 39px;
-    }
-  
-    @include onLaptop {
-      right: 55px;
-    }
-  }
-
-  &__information {
-    margin-top: 80px;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-
-    @include onTablet {
-      margin-top: 120px;
-
-      flex-direction: row-reverse;
-      justify-content: space-between;
-    }
-
-    @include onLaptop {
-      margin-top: 85px;
-    }
-
-    &--item {
-      @include text_12_150_300;
-    }
-  }
-}
-
-.menu {
-  margin: 0;
-
-  padding-left: 0;
-  list-style: none;
-  white-space: nowrap;
-
-  &__link {
-    text-decoration: none;
-  }
-}
+@import "./blocks/layot.scss";
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+
+@import "./blocks/page.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/header.scss";
+@import "./blocks/form-field.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
+@import "./blocks/footer.scss";
